# TalitaBot

./: .env_example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  SETUP.md  architecture.excalidraw  dashboard.py  linkedin_connection_searcher.py  linkedin_messages.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_daily.cmd  start.cmd
.claude/: CLAUDE.md  settings.json
.claude/rules/: code-style.md  configuration.md  dashboard.md  llm.md  playwright.md  resume_gen.md  security.md  testing.md
config/: app_config.py  constants.py  logger_config.py  search_config.yaml
data/resumes/: resume_text.txt
docs/: linkedin-messages-manager.md
examples/: .env_example
examples/config/: app_config.py  linkedin_connection_searcher_config.yaml  linkedin_messages_manager_config.yaml  search_config.yaml
src/dashboard/: README.md  __init__.py  data_service.py  runtime.py  server.py
src/job_manager/: authenticator.py  bot_facade.py  easy_applier.py  job_manager.py  resume_anonymizer.py  search_customizer.py
src/llm/: apply_agent.py  benchmark_provider.py  llm_manager.py  prompts.py
src/pydantic_models/: config_models.py  job_models.py  log_models.py  prompt_models.py
src/resume_builder/: resume_generator.py  resume_manager.py  style_manager.py  template_base.py
src/telegram/: get_telegram_chat_and_topic_id.py  telegram_error_handler.py  telegram_manager.py
src/utils/: application_tracker.py  browser_utils.py  json_to_readable.py  run_summary.py  (+2 more)
tests/: _test_browser_utils.py  _test_proxy.py  conftest.py  test_authenticator.py  test_commute_relocation.py  test_dashboard_data_service.py  test_dashboard_server.py  test_easy_applier.py  test_easy_applier_indeed.py  test_easy_applier_linkedin.py  test_easy_applier_unit.py  test_job_manager.py  test_job_manager_indeed.py  test_job_manager_linkedin.py  test_json_to_readable.py  test_linkedin_messages_config.py  test_llm_benchmark.py  test_llm_manager.py  test_main.py  test_messages_manager_linkedin.py  test_resume_anonymizer.py  test_run_summary.py  test_salary_expectation.py  test_search_customizer.py  test_search_customizer_indeed.py  test_search_customizer_linkedin.py  test_telegram_error_handler.py  test_telegram_manager.py  test_utils.py  test_writing_prompt.py
(+16 files in other folders)
